--- a/SGA/TCC_DEFINITIVO/style.css
+++ b/SGA/TCC_DEFINITIVO/style.css
@@ -167,13 +167,22 @@ input.form-input {
     background-color: #ffffff;
     margin: auto;
     padding: 5rem 2rem;
-}
+}*/
 
-.bloco h1{
-    color: #000000;
+.bloc h1{
+    color: #ffffff;
     font-size: 40px;
     text-align: center;
-}*/
+}
+
+.bloc{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 .bloco{
     width: 100%;
